trunk/Archive/7d60349635e133fbf5d57035a994879f-3725be9f9ce62f113fc473b4ae69c419/output
+ g++ -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp:107:2: error: expected unqualified-id before ‘:’ token
  :)
  ^
